base/ms-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: demo
  name: store-front
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - store.172.18.0.100.nip.io
  rules:
  - host: "store.172.18.0.100.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: store-front
            port:
              number: 80
